@@ -1,7 +1,6 @@
 package io.festival.distance.domain.conversation.chatroom.service;
 
 import io.festival.distance.domain.conversation.chat.dto.ChatMessageResponseDto;
-import io.festival.distance.domain.conversation.chat.entity.ChatMessage;
 import io.festival.distance.domain.conversation.chat.repository.ChatMessageRepository;
 import io.festival.distance.domain.conversation.chatroom.dto.ChatRoomDto;
 import io.festival.distance.domain.conversation.chatroom.dto.ChatRoomInfoDto;
@@ -17,6 +16,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.security.Principal;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -27,31 +27,53 @@ public class ChatRoomService {
     private final MemberRepository memberRepository;
     private final RoomMemberRepository roomMemberRepository;
     private final ChatMessageRepository chatMessageRepository;
-    public ChatRoomDto generateRoom(ChatRoomDto chatRoomDto, Principal principal) {
+
+    public Long generateRoom(ChatRoomDto chatRoomDto, Principal principal) {
         Member member1 = memberRepository.findById(chatRoomDto.getMemberId())
                 .orElseThrow(() -> new DistanceException(ErrorCode.EXIST_NICKNAME));
-        Member member2 = memberRepository.findBySchoolEmail(principal.getName());
+
+        Member member2 = memberRepository.findByLoginId(principal.getName())
+                .orElseThrow(()-> new DistanceException(ErrorCode.NOT_EXIST_MEMBER));
 
         ChatRoom chatRoom = ChatRoom.builder()
                 .roomName(chatRoomDto.getRoomName())
                 .build();
 
         Long chatRoomId = chatRoomRepository.save(chatRoom).getChatRoomId();
-        addRoomMember(chatRoomId, List.of(member1,member2));
-        return chatRoomDto;
+        addRoomMember(chatRoomId, List.of(member1, member2));
+        return chatRoomId;
     }
 
-    public List<ChatRoomInfoDto> findAllRoom() {
-        return chatRoomRepository.findAll()
+    public List<ChatRoomInfoDto> findAllRoom(String loginId) {
+        Member member = memberRepository.findByLoginId(loginId)
+                .orElseThrow(() -> new DistanceException(ErrorCode.NOT_EXIST_MEMBER));
+
+        List<Long> list = roomMemberRepository.findAllByMember(member)
                 .stream()
-                .map(ChatRoomInfoDto::new)
-                .collect(Collectors.toList());
+                .map(roomId -> roomId.getChatRoom().getChatRoomId())
+                .toList();
+
+        List<ChatRoomInfoDto> dtoList = new ArrayList<>(); // 현재 객체가 속한 방 ID값
+
+        for (Long roomId : list) {
+            chatRoomRepository.findById(roomId).ifPresent(chatRoom -> {
+                ChatRoomInfoDto dto = ChatRoomInfoDto.builder()
+                        .chatRoomId(chatRoom.getChatRoomId())
+                        .roomName(chatRoom.getRoomName())
+                        .createDt(chatRoom.getCreateDt())
+                        .modifyDt(chatRoom.getModifyDt())
+                        .build();
+                dtoList.add(dto);
+            });
+        }
+        return dtoList;
     }
 
-    public void addRoomMember(Long chatRoomId,List<Member> member){
+    public void addRoomMember(Long chatRoomId, List<Member> member) {
         ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(() -> new IllegalStateException("존재하지 않는 방"));
-        for(Member m:member){
+
+        for (Member m : member) {
             RoomMember roomMember = RoomMember.builder()
                     .chatRoom(chatRoom)
                     .lastReadMessageId(0L)
@@ -76,6 +98,6 @@ public class ChatRoomService {
 
     public ChatRoom findRoom(Long roomId) {
         return chatRoomRepository.findById(roomId)
-                .orElseThrow(()->new IllegalStateException("존재하지 않는 방"));
+                .orElseThrow(() -> new IllegalStateException("존재하지 않는 방"));
     }
 }
